# git-cognitive

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  TESTING.md  install.sh
.github/workflows/: publish.yml  release.yml
src/: agent.rs  audit.rs  blame.rs  cognitive_debt.rs  db.rs  index.rs  main.rs  parse.rs  picker.rs  session.rs  treesitter.rs
